# drf-auth

./: pyproject.toml
snackBlog/: db.sqlite3  docker-compose.yml  manage.py  requirements.txt
snackBlog/snackBlog/: asgi.py  settings.py  urls.py  wsgi.py
snackBlog/snackpost/: admin.py  apps.py  containerize.py  models.py  urls.py  views.py
snackBlog/snackpost/migrations/: 0001_initial.py  0002_alter_post_timestamp_alter_post_updated.py  0003_alter_post_timestamp_alter_post_updated.py
